[package]
name = "usman-function"
version = "0.1.0"
authors = ["Emma Paris <eparis@atlassian.com>"]
edition = "2018"
description = "My first library"
license = "MIT"
repository = "https://github.com/usmanshiek/rust_library"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
